--- a/estilo/style.css
+++ b/estilo/style.css
@@ -56,7 +56,7 @@ section{
     font-size: 3.5vw;
     padding-top: 5vh;
     padding-bottom: 5vh;
-    margin: 5vh;
+    min-width: auto;
 }
 
 section.normal{
