--- a/estilo/style.css
+++ b/estilo/style.css
@@ -69,6 +69,7 @@ section.imagem{
     background-size: cover;
 
     color: black;
+    margin: 0;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.418);
 }
 
