--- a/estilo/style.css
+++ b/estilo/style.css
@@ -70,6 +70,7 @@ section.imagem{
 
     color: black;
     margin: 0;
+    padding: 0;
     box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.418);
 }
 
